# cuestrap

./: .envrc  .gitignore  README.md  justfile  logs.md  pyproject.toml
.codex/: AGENTS.md  config.toml
.codex/hooks/: README.md  WORKBOOK_ARCHITECTURE.md  cuestrap_tool_supervisor.py
.github/: update-proposal-system-b.transform.b64
.github/continuous-ato-payload/: part-00.txt  part-01.txt  part-02.txt  part-03.txt  part-04.txt
.github/workflows/: apply-continuous-ato-proposal.yml  ci.yml  harness.yml  s04-properties.yml  s04-v018-validation.yml  tool-bundles.yml  update-proposal-system-b.yml
cue.mod/: module.cue
docs/: cuestrap-governed-repository-controller-proposal.md
environment/: toolchain.cue
kernel/: README.md
pattern/: README.md  pilot.cue
pattern/s04/: LT01_FIXTURE_DESIGN.md  OBJECT_MODEL.md  README.md  VALIDATION.md  contracts.cue  integrity.cue  invalid_claim_value.cue.txt  invalid_disjunctive_materialization.cue.txt  invalid_disjunctive_required_outcome.cue.txt  invalid_incomplete_claim_value.cue.txt  invalid_incomplete_materialization.cue.txt  invalid_materialization.cue.txt  invalid_outcome_constraint.cue.txt  lt01.cue  (+17 more)
probe/: README.md
runner/: README.md  go.mod
tests/: test_bootstrap_native.py  test_code_mode_client.py  test_harness.py  test_native_harness.py  test_native_worker_boundary.py  test_protocol.py  test_s04_lt01_execution.py  test_s04_lt01_fixtures.py  test_s04_package.py  test_s04_properties.py  test_supervisory_hook_boundary.py  test_supervisory_hooks.py  test_workbook_mcp_server.py
workbook/: cue_workbook.py
(+115 files in other folders)
