[project]
name = "cuestrap"
version = "0.1.0"
description = "Single-pattern CUE bootstrap laboratory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cffi>=1.16,<3",
    "hypothesis>=6,<7",
    "marimo>=0.19,<1",
    "pydantic>=2,<3",
]

[tool.uv]
package = false

[tool.cuestrap.project]
schema = "cuestrap.uv-project.v1"
workbook = "workbook/cue_workbook.py"
environment = ".venv"
